<resources>
    <string name="app_name">The Dollars Community</string>
    <string name="user_file_key">UserData</string>
    <string name="user_file_nick">NickData</string>
    <string name="user_file_description">DescriptionData</string>
    <string name="user_file_gender">GenderData</string>
    <string name="user_file_birth_day">BirthDayData</string>
    <string name="user_file_birth_month">BirthMonthData</string>
    <string name="user_file_birth_year">BirthYearData</string>
    <string name="user_file_registered">RegisteredData</string>

    <string name="title_activity_password">Password</string>
    <string name="wrong">Wrong!</string>
    <string name="connect">Connect</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_contact">Contact Us!</string>

    <string name="main">Main</string>
    <string name="missions">Missions</string>
    <string name="news">News</string>
    <string name="personal">Personal</string>

    <string name="forums">Forums</string>
    <string name="roadrunner_forums">RoadRunner Forums</string>
    <string name="dollars_worldwide">Dollars Worldwide</string>

    <string name="chats">Chats</string>
    <string name="chat">Chat</string>
    <string name="chat_all">Chat all members</string>

    <string name="durarara_chat">Durarara Chat</string>
    <string name="dollars_chatroom">Drrr Dollars Chatroom</string>

    <string name="other">Other</string>
    <string name="tumblr">Tumblr</string>
    <string name="map">Map</string>
    <string name="free_rice">Free Rice!</string>
    <string name="kiva">Lend Cash on Kiva</string>

    <string name="settings">Settings</string>
    <string name="send_feedback">Send feedback</string>

    <string name="failed_feed_load">LOAD FAILED\nTOUCH TO RETRY</string>
    <string name="failed_feed_fetch">Load failed!</string>

    <string name="title_activity_registration">Registration</string>
    <string name="image">Your image</string>
    <string name="nickname">Nickname</string>
    <string name="description">Describe yourself</string>
    <string name="gender">Gender</string>
    <string-array name="gender_array">
        <item>Don\'t want to say</item>
        <item>Male</item>
        <item>Female</item>
        <item>Agender / genderless</item>
        <item>Androgyne</item>
        <item>Bigender (bi-gender)</item>
        <item>Cisgender / cissexual</item>
        <item>Genderqueer / non-binary</item>
        <item>Hijra</item>
        <item>Pangender</item>
        <item>Queer heterosexuality</item>
        <item>Third gender / Third sex</item>
        <item>Trans man</item>
        <item>Trans woman</item>
        <item>Trigender (tri-gender)</item>
        <item>Two-Spirit</item>
        <item>Other</item>
    </string-array>
    <string name="birth_date">Birth Date</string>
    <string name="register">Register</string>

    <string name="action_attach">Attach</string>
    <string name="chat_nearby">Chat members nearby</string>
    <string name="contentdesc_user_image">User image</string>
    <string name="separation">-</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="localization">Use localization for finding who is near you and whom you\'re near.</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_send_image">Send Image</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
